# envcli

./: .gitignore  CHANGELOG.md  Cargo.toml  ENCRYPTION_GUIDE.md  PLUGIN_SYSTEM.md  QUICKSTART_PLUGIN.md  README.md
.github/workflows/: ci.yml  release.yml
docs/: CHANGELOG.md  README.md  best-practices.md  cache-optimization-summary.md  development-guide.md  optimization-plan.md  p0-completion-summary.md  p1-ux-enhancement-summary.md  p2-documentation-summary.md  performance-analysis.md  performance-report.md  plugin-development.md  priority-plan.md  project-analysis.md  project-overview.md  quick-start.md  refactoring-completion.md  refactoring-guide.md  refactoring-summary.md  user-guide.md  user-manual.md
examples/plugin/: README.md  example_plugin.py  example_plugin.rs
src/: app.rs  cli.rs  error.rs  lib.rs  main.rs  test_utils.rs  types.rs
src/application/: mod.rs
src/application/services/: env_service.rs  mod.rs
src/commands/: cache.rs  config.rs  doctor.rs  export.rs  get.rs  import.rs  list.rs  mod.rs  run.rs  set.rs  status.rs  system.rs  unset.rs
src/config/format/: dotenv.rs  encrypted_dotenv.rs  mod.rs
src/core/: store.rs
src/domain/: error.rs  mod.rs  repositories.rs
src/domain/models/: env_var.rs  mod.rs
src/infrastructure/: cache.rs  mod.rs  paths.rs  storage.rs
src/plugin/: api.rs  config.rs  dependency.rs  hook.rs  manager.rs  mod.rs  signature.rs  types.rs  validation.rs  watcher.rs
src/plugin/loader/: dynamic.rs  executable.rs  mod.rs
src/template/: mod.rs  parser.rs  renderer.rs
src/utils/: encryption.rs  env_merge.rs  executor.rs  mod.rs  paths.rs  system_env.rs  system_env_integration_tests.rs  system_env_tests.rs
tests/: cli_integration.rs
