[package]
name = "envcli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "env"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
dirs = "5.0"
regex = "1.10"
toml = "0.8"
libloading = "0.8"
ring = "0.17"              # 密码学库（签名验证）
hex = "0.4"                # 十六进制编码
sha2 = "0.10"              # SHA-256哈希（重放防护）
notify = { version = "6.1", optional = true }  # 文件变更监听（自动热重载）

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
winreg = "0.52"  # Windows 注册表访问

[dev-dependencies]
# 测试框架
tempfile = "3.8"           # 临时文件和目录
assert_cmd = "2.0"         # 命令行集成测试
predicates = "3.0"         # 断言库
serial_test = "3.0"        # 串行测试执行
# 覆盖率工具（可选，需要安装 cargo-tarpaulin）
# cargo install cargo-tarpaulin
# cargo tarpaulin --out Html

[profile.test]
opt-level = 0
debug = true

