[package]
name = "envcli"
version = "0.3.0"
edition = "2024"

[[bin]]
name = "envcli"
path = "src/main.rs"

[dependencies]
# 异步运行时
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# CLI 和序列化
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"

dirs = "5.0"

# 工具和文本处理
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }

tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 错误美化
miette = { version = "7.0", features = ["fancy"] }

# Windows 特定依赖
[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"

[profile.test]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
